[gd_scene load_steps=12 format=3 uid="uid://dm2ij4du08bu1"]

[ext_resource type="Script" path="res://scripts/door.gd" id="1_rkat4"]
[ext_resource type="Texture2D" uid="uid://lap0wph7cchm" path="res://assets/custom assets/door.png" id="2_d4keq"]
[ext_resource type="FontFile" uid="uid://do7rqgojjbhfr" path="res://assets/custom assets/PixelOperator8.ttf" id="3_nuk06"]
[ext_resource type="LabelSettings" uid="uid://bajqfgwtph3ti" path="res://assets/text_settings.tres" id="4_ko4dj"]

[sub_resource type="Animation" id="Animation_3v151"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_keiiq"]
resource_name = "closed"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_r507b"]
resource_name = "opened"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2go5"]
_data = {
"RESET": SubResource("Animation_3v151"),
"closed": SubResource("Animation_keiiq"),
"opened": SubResource("Animation_r507b")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tc486"]
radius = 16.2788

[sub_resource type="Gradient" id="Gradient_qk1bq"]
offsets = PackedFloat32Array(0, 0.8)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_inf0r"]
gradient = SubResource("Gradient_qk1bq")
width = 48
height = 48
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Door" type="Area2D"]
collision_mask = 2
script = ExtResource("1_rkat4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_d4keq")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q2go5")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_tc486")

[node name="ActivateLight" type="PointLight2D" parent="."]
position = Vector2(0, 3)
color = Color(0.305882, 0.356863, 0.192157, 1)
texture = SubResource("GradientTexture2D_inf0r")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -32.0
offset_right = 52.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.929412, 0.894118, 0.854902, 1)
theme_override_fonts/font = ExtResource("3_nuk06")
theme_override_font_sizes/font_size = 8
text = "XXX Coins to Exit"
label_settings = ExtResource("4_ko4dj")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
